--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -21,6 +21,7 @@ html {
 }
 
 .head-section,
-.intro-section article {
+.intro-section article,
+.golden-bear-section article {
   margin: 0 10vw;
 }
