--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -22,6 +22,9 @@ html {
 
 .head-section,
 .intro-section article,
-.golden-bear-section article {
+.golden-bear-section article,
+.poppy-bear-section > p,
+.poppy-bear-section article,
+.footer-text {
   margin: 0 10vw;
 }
