--- a/assets/scss/extends.scss
+++ b/assets/scss/extends.scss
@@ -4,6 +4,7 @@
   border: 1px solid $lightgrey-color;
   background: none;
   color: $white-color;
+  transition: 0.25s linear;
 }
 
 .wall-block-text {
