--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -41,6 +41,10 @@ header {
       justify-content: space-between;
       button {
         @extend .buttons;
+
+        &:hover {
+          @include hovering($white-color, $black-color);
+        }
       }
     }
   }
