--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -350,6 +350,10 @@ footer {
         button {
           @extend .buttons;
           width: 15%;
+
+          &:hover {
+            @include hovering($white-color, $black-color);
+          }
         }
       }
 
