Hover Effekte eingefügt

--- a/assets/scss/extends.scss
+++ b/assets/scss/extends.scss
@@ -4,6 +4,7 @@
   border: 1px solid $lightgrey-color;
   background: none;
   color: $white-color;
+  cursor: pointer;
   transition: 0.25s linear;
 }
 
